2013-09-09	Anton Kolesov <akolesov@synopsys.com>

	* README.md: Mention that Git tags should be used to obtain stable
	releases.

2013-09-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Correct uClibc version.

2013-08-20  Simon Cook  <simon.cook@embecosm.com>

	* arc-versions.sh: Update branch names to new naming convention.

2013-08-09  Simon Cook  <simon.cook@embecosm.com>

	* README.md: Update description of stable branches.

2013-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Based on an idea from Christian Ruppert
	<christian.ruppert@abilis.com>

	* build-all.sh: Add --uclibc-defconfig option, setting
	UCLIBC_DEFCFG environment variable.
	* build-uclibc.sh: Use UCLIBC_DEFCFG environment variable to
	specify defconfig for uClibc.

2013-06-25  Simon Cook  <simon.cook@embecosm.com>

	* tag-release.sh: Use LINUXDIR environment variable.

2013-06-20  Simon Cook  <simon.cook@embecosm.com>

	* build-all.sh: Disable automatic patching of relative RPATHs.

2013-06-18  Simon Cook  <simon.cook@embecosm.com>

	* rel-rpaths.sh: Added script to replace hard-coded RPATHs in
	the compiled toolchain with those relative to INSTALL.
	* build-all.sh: Added option to enable/disable setting of relative
	RPATHs. This is enabled by default.

2013-06-17  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Provide separate environment variables for ELF32
	and UCLIBC multilibs. Disable multilib by default with uClibc.
	* build-elf32.sh: Use ELF32_DISABLE_MULTILIB instead of
	DISABLE_MULTILIB.
	* build-uclibc.sh: Use UCLIBC_DISABLE_MULTILIB instead of
	DISABLE_MULTILIB.

2013-06-17  Anton Kolesov <anton.kolesov@synopsys.com>

	* README.md: Provide more detailed instructions on installing
	prequisites and building toolchain.

2013-06-12  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Correct test for use LINUXDIR environment variable.

2013-06-12  Jeremy Bennett <jeremy.bennett@embecosm.com>
