@@ -1,3 +1,8 @@
+2013-09-30  Anton Kolesov <akolesov@synopsys.com>
+
+	* rel-rpaths.sh: Check that uClibc libc.so file exists before trying to
+	update it. Otherwise script fails for elf32-only toolchain build.
+
 2013-09-09	Anton Kolesov <akolesov@synopsys.com>
 
 	* README.md: Mention that Git tags should be used to obtain stable
